REGRESSION(r195661): [GTK] Scrollbar tests crashing after overlay scrollbar groundwork https://bugs.webkit.org/show_bug.cgi?id=153695

Reviewed by Michael Catanzaro.

Source/WebCore:

The problem is that ScrollAnimation objects are not destroyed by
the ScrollAnimator destructor, because I forgot to add a virtual
destructor for ScrollAnimation in r195661.

* platform/ScrollAnimation.h:
(WebCore::ScrollAnimation::~ScrollAnimation):

LayoutTests:

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/172065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196238 268f45cc-cd09-0410-ab3c-d52691b4dbfc